--- a/app/views/spree/admin/live_stream/index.html.erb
+++ b/app/views/spree/admin/live_stream/index.html.erb
@@ -7,8 +7,8 @@
 <% end %>
 
 <% content_for :table_filter do %>
-  <div data-hook="admin_products_sidebar">
-    <%= search_form_for [:admin, @search], url: admin_live_stream_index_path do |f| %>
+  <div data-hook="admin_products_sidebar">    
+    <%= search_form_for @q, url: admin_live_stream_index_path do |f| %>
       <%- locals = {f: f} %>
       <div data-hook="admin_products_index_search" class="row">
         <div class="col-12 col-lg-6">
@@ -30,7 +30,7 @@
 <div class="table-responsive">
   <table class="table">
     <thead>
-      <th>Title</th>
+      <th scope="col"><%= sort_link(@q, :title, "Title", default_order: :asc) %></th>
       <th>Description</th>
       <th>Stream URL</th>
       <th>Stream Key</th>
