minor fix in menu locations

--- a/app/views/spree/admin/menu_locations/show.html.erb
+++ b/app/views/spree/admin/menu_locations/show.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'spree/admin/shared/error_messages', locals: { target: @message } %>
 <% content_for :page_title do %>
-  <%= link_to Spree.t(:menu_location), spree.admin_menu_location_path %> /
+  <%= link_to Spree.t(:menu_locations), spree.admin_menu_location_path %>/
   <%= Spree.t(:location_details) %>
 <% end %>
 
