--- a/app/views/spree/admin/messages/index.html.erb
+++ b/app/views/spree/admin/messages/index.html.erb
@@ -65,7 +65,9 @@
           <td><%= message&.sentiment %></td>
           <td><%= message&.thread_table_id %></td>
           <td class="actions actions-2 text-right" data-hook="admin_message_index_row_actions">
-            <%= link_to "Conversation", spree.conversation_admin_message_path(id: message.id) %>
+            <%= link_to spree.conversation_admin_message_path(id: message.id) do %>
+              <%= image_tag('backend-chat.svg', height: 25, width: 25) %>
+            <% end %>
             <%= link_to_edit_url spree.edit_admin_message_path(id: message.id), no_text: true if can?(:edit, message) %>
             <%= link_to_delete message.id, no_text: true, url: admin_message_path(id: message.id) if can?(:destroy, message.id) %>
           </td>
