--- a/app/views/spree/layouts/admin.html.erb
+++ b/app/views/spree/layouts/admin.html.erb
@@ -46,7 +46,7 @@
         <%# Content                                         %>
         <%#-------------------------------------------------%>
         <main class="col-12 col-lg-9 col-xl-10 offset-lg-3 offset-xl-2 main" id="main-part">
-          <div class="container">
+          <div class="container conversation-page">
 
             <%#-------------------------------------------------%>
             <%# Content header (page title/actions)             %>
