add style to dropdown in menumangament form

--- a/app/views/spree/admin/menu_items/_form.html.erb
+++ b/app/views/spree/admin/menu_items/_form.html.erb
@@ -19,7 +19,8 @@
 
 
     <div class="field" style="margin: 10px;">
-      <%= f.select(:menu_location_id, @menu_location.map{|r| [r.title, r.id]},:include_blank=> "Select") %>
+      <%= f.label :menu_location_id %>
+      <%= f.select(:menu_location_id, @menu_location.map{|r| [r.title, r.id]},{:include_blank=> "Select"}, {:style=> "height: 29px; width: 210px;"}) %>
     </div>
   </div>
 
