--- a/app/views/spree/admin/menu_items/index.html.erb
+++ b/app/views/spree/admin/menu_items/index.html.erb
@@ -5,9 +5,12 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <li><%= link_to_with_icon 'plus', Spree.t('navigator.admin.button.new'), new_admin_menu_item_path, class: 'button' %></li>
+
+    <%= button_link_to Spree.t('navigator.admin.button.new'), new_admin_menu_item_path, class: "btn-success", icon: 'add.svg' %>
+
 <% end %>
 <% if @menu_items.any? %>
+<%#= render '/spree/admin/menu_items/children_menu' %>
   <%= render partial: 'spree/admin/menu_items/tree' %>
 <% else %>
   <div class="alpha twelve columns no-objects-found">
