--- a/app/views/spree/admin/menu_items/new.html.erb
+++ b/app/views/spree/admin/menu_items/new.html.erb
@@ -5,7 +5,8 @@
 <% end %>
 
 <% content_for :page_actions do %>
-  <li><%= link_to_with_icon 'arrow-left', Spree.t('navigator.admin.button.back'), admin_menu_items_path, class: 'button' %></li>
+    <%= button_link_to Spree.t('navigator.admin.button.back'), admin_menu_items_path, class: "btn-success", icon: 'arrow-left' %>
+
 <% end %>
 
 <%= render partial: 'spree/shared/error_messages', locals: { target: @menu_item } %>
