--- a/app/views/spree/admin/menu_items/_tree.html.erb
+++ b/app/views/spree/admin/menu_items/_tree.html.erb
@@ -17,6 +17,6 @@
       <%= image_tag 'instinct_logo.png', :title => 'Spinner', :style => "vertical-align:bottom;" %> <%= Spree.t(:updating) %>...
     </div>
 
-    <div class="info"><%= Spree.t('navigator.admin.ajax.instructions') %></div>
+    <div class="info"><%= Spree.t('menu_navigator.admin.ajax.instructions') %></div>
   </fieldset>
 <% end %>
