--- a/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/app/views/spree/admin/shared/_main_menu.html.erb
@@ -12,7 +12,8 @@
 
   <% if can? :admin, Spree::Order %>
     <ul class="nav nav-sidebar border-bottom" id="sidebarOrder">
-      <%= tab *Spree::BackendConfiguration::ORDER_TABS, icon: 'list.svg' %>
+      <#%= tab *Spree::BackendConfiguration::ORDER_TABS, icon: 'list.svg' %>
+      <%= main_menu_tree Spree.t(:orders), icon: "list.svg", sub_menu: "orders", url: "#sidebar-orders" %>
     </ul>
   <% end %>
 
