--- a/app/views/spree/admin/shared/sub_menu/_message.html.erb
+++ b/app/views/spree/admin/shared/sub_menu/_message.html.erb
@@ -1,4 +1,5 @@
 <ul id="sidebar-messages" class="border-top bg-white collapse nav nav-pills nav-stacked" data-hook="admin_message_sub_tabs">
   <%= tab "Messages", url: admin_messages_path %>
   <%= tab "Conversations", url: conversations_admin_messages_path %>
+  <%= tab "Admin Conversations", url: admin_conversations_admin_messages_path %>
 </ul>
