--- a/app/views/spree/shared/_login.html.erb
+++ b/app/views/spree/shared/_login.html.erb
@@ -1,50 +1,44 @@
-<body>
-  <div class="divclass">
-    <div class="col-lg-11 mx-auto wrapper">
-      <h3 class="spree-mb-large spree-mt-large spree-header" style="color: aliceblue;"><%= image_tag(ENV['COMPANY_LOGO'], style: "height: 100px;") %></h3>
-      <%= form_for Spree.user_class.new, as: :spree_user, url: spree_login_path do |f| %>
-        <div id="password-credentials" class="mb-4">
-          <div class="form-group mb-4">
-            <p class="form-group checkout-content-inner-field">
-              <%= f.email_field :email, class: 'box1 spree-flat-input', placeholder: Spree.t(:email), value: params.dig(:spree_user, :email) %>
-            </p>
-          </div>
-          <div class="form-group mb-4">
-            <p class="form-group checkout-content-inner-field">
-              <%= f.password_field :password, class: 'box1 spree-flat-input', placeholder: Spree.t(:password) %>
-            </p>
-          </div>
+<div class="divclass">
+  <div class="col-lg-11 mx-auto wrapper">
+    <h3 class="spree-mb-large spree-mt-large spree-header" style="color: aliceblue;"><%= image_tag(ENV['COMPANY_LOGO'], style: "height: 100px;") %></h3>
+    <%= form_for Spree.user_class.new, as: :spree_user, url: spree_login_path do |f| %>
+      <div id="password-credentials" class="mb-4">
+        <div class="form-group mb-4">
+          <p class="form-group checkout-content-inner-field">
+            <%= f.email_field :email, class: 'box1 spree-flat-input', placeholder: Spree.t(:email), value: params.dig(:spree_user, :email) %>
+          </p>
         </div>
+        <div class="form-group mb-4">
+          <p class="form-group checkout-content-inner-field">
+            <%= f.password_field :password, class: 'box1 spree-flat-input', placeholder: Spree.t(:password) %>
+          </p>
+        </div>
+      </div>
 
-        <% if Spree::Frontend::Config[:remember_me_enabled] %>
-          <div class="spree-checkbox-container mt-4 mt-sm-5 mt-lg-4 spree-mb-medium">
-            <div class="spree-checkbox">
-              <%= f.check_box :remember_me %>
-              <%= f.label :remember_me, '' %>
-            </div>
-
-            <%#= f.label :remember_me, Spree.t(:remember_me), class: 'spree-checkbox-label' %>
+      <% if Spree::Frontend::Config[:remember_me_enabled] %>
+        <div class="spree-checkbox-container mt-4 mt-sm-5 mt-lg-4 spree-mb-medium">
+          <div class="spree-checkbox">
+            <%= f.check_box :remember_me %>
+            <%= f.label :remember_me, '' %>
           </div>
-        <% end %>
 
-        <%= f.submit Spree.t(:log_in), class: 'btn btn-primary btn-block spree-btn mt-2' %>
-      <% end %>
-
-      <% if spree.respond_to?(:recover_password_path) %>
-        <div class="text-center forgot-password mb-4">
-          <%= link_to Spree.t(:forgot_password), spree.recover_password_path, class: 'fp' %>
+          <%#= f.label :remember_me, Spree.t(:remember_me), class: 'spree-checkbox-label' %>
         </div>
       <% end %>
-    </div>
+
+      <%= f.submit Spree.t(:log_in), class: 'btn btn-primary btn-block spree-btn mt-2' %>
+    <% end %>
+
+    <% if spree.respond_to?(:recover_password_path) %>
+      <div class="text-center forgot-password mb-4">
+        <%= link_to Spree.t(:forgot_password), spree.recover_password_path, class: 'fp' %>
+      </div>
+    <% end %>
   </div>
-</body>
+</div>
 
 <style type="text/css">
   $primary: #2196F3;
-
-  body {
-    margin: 0 !important;
-  }
 
   .divclass {
     font-family: "Open Sans", sans-serif;
@@ -73,6 +67,8 @@
     background: rgba(darken(#008EAE,40%), 0.85);
     font-family: "Open Sans", sans-serif;
     height: 100vh;
+    margin: -8px -8px;
+    width: 100vw;
     background-image: url("<%= ENV['COMPANY_BACKGROUND'] %>");
     background-size: cover;
   }
